--- a/index.html
+++ b/index.html
@@ -4,106 +4,195 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harshit Rameja | Portfolio</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Fira+Code:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
+      /* Reset */
       * {
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
         scroll-behavior: smooth;
       }
+
       body {
-        font-family: "Segoe UI", Arial, sans-serif;
-        margin: 0;
-        background: #f5f7fa;
-        color: #222;
+        font-family: "Poppins", sans-serif;
+        background: linear-gradient(135deg, #0f0f0f, #1c1c1c 40%, #111 100%);
+        color: #f2f2f2;
+        line-height: 1.6;
       }
+
       header {
-        background: #222;
+        background: linear-gradient(90deg, #ff4d4d, #ff9a00, #ffd500);
+        background-size: 200% 200%;
+        animation: gradientFlow 6s ease infinite;
         color: #fff;
-        padding: 2rem 0 1rem 0;
         text-align: center;
+        padding: 3rem 1rem;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
       }
+
       header h1 {
-        margin: 0;
-        font-size: 2.5rem;
+        font-size: 2.8rem;
+        margin-bottom: 0.5rem;
+        font-family: "Fira Code", monospace;
       }
+
       header p {
-        margin: 0.5rem 0 0 0;
         font-size: 1.2rem;
-        color: #b3b3b3;
+        opacity: 0.9;
       }
-      nav {
+
+      /* --- NAV FIX: horizontal alignment --- */
+      header nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: clamp(0.5rem, 2vw, 1.25rem);
         margin-top: 1rem;
+        flex-wrap: wrap;
       }
-      nav a {
-        color: #fff;
+
+      header nav a {
+        margin: 0;
         text-decoration: none;
-        margin: 0 1rem;
+        color: #fff;
         font-weight: 500;
-        transition: color 0.2s;
+        position: relative;
+        display: inline-flex;
+        padding: 0.35rem 0.6rem;
+        transition: color 0.3s;
       }
-      nav a:hover {
-        color: #ffd700;
-      }
-      .container {
-        max-width: 900px;
-        margin: 2rem auto;
+
+      header nav a::after {
+        content: "";
+        height: 2px;
+        width: 0;
         background: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07);
-        padding: 2rem;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        transition: width 0.3s;
       }
+
+      header nav a:hover::after {
+        width: 100%;
+      }
+
+      .container {
+        max-width: 1000px;
+        margin: 2rem auto;
+        padding: 0 1.5rem;
+      }
+
       section {
-        margin-bottom: 2.5rem;
+        margin-bottom: 3rem;
       }
+
       h2 {
-        color: #222;
-        border-bottom: 2px solid #ffd700;
-        display: inline-block;
-        padding-bottom: 0.2rem;
+        font-size: 2rem;
         margin-bottom: 1rem;
+        display: inline-block;
+        font-family: "Fira Code", monospace;
+        background: linear-gradient(90deg, #ff4d4d, #ff9a00, #ffd500);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
-      ul {
-        padding-left: 1.2rem;
+
+      p {
+        font-size: 1.1rem;
+        color: #dcdcdc;
       }
-      .skills-list,
-      .projects-list {
+
+      /* Skills */
+      .skills-list {
         display: flex;
         flex-wrap: wrap;
         gap: 1rem;
+        margin-top: 1rem;
         list-style: none;
-        padding: 0;
       }
-      .skills-list li,
-      .projects-list li {
-        background: #f0f0f0;
-        border-radius: 4px;
-        padding: 0.5rem 1rem;
+      .skills-list li {
+        padding: 0.6rem 1.2rem;
+        background: #1f1f1f;
+        border-radius: 20px;
+        border: 1px solid #333;
         font-size: 1rem;
+        transition: transform 0.3s, box-shadow 0.3s;
       }
+      .skills-list li:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 0 10px rgba(255, 180, 0, 0.5);
+      }
+
+      /* Projects */
       .project-card {
-        background: #f9f9f9;
-        border: 1px solid #eee;
-        border-radius: 6px;
-        padding: 1rem;
-        margin-bottom: 1rem;
+        background: #1b1b1b;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
+      .project-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 0 15px rgba(255, 77, 77, 0.4);
       }
       .project-card h3 {
-        margin: 0 0 0.5rem 0;
+        margin-bottom: 0.5rem;
+        color: #ffd500;
       }
+      .project-card a {
+        display: inline-block;
+        margin-top: 0.5rem;
+        color: #ff9a00;
+        text-decoration: none;
+        font-weight: 500;
+      }
+      .project-card a:hover {
+        text-decoration: underline;
+      }
+
+      /* Contact */
       .contact-info {
         margin-top: 1rem;
       }
       .contact-info a {
-        color: #222;
-        text-decoration: none;
         margin-right: 1.5rem;
+        text-decoration: none;
+        color: #ff9a00;
+        font-weight: 500;
       }
       .contact-info a:hover {
-        text-decoration: underline;
+        color: #ffd500;
       }
-      @media (max-width: 600px) {
-        .container {
-          padding: 1rem;
+
+      footer {
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.9rem;
+        color: #aaa;
+        border-top: 1px solid #222;
+      }
+
+      @keyframes gradientFlow {
+        0% {
+          background-position: 0% 50%;
         }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+
+      @media (max-width: 600px) {
         header h1 {
           font-size: 2rem;
         }
@@ -113,7 +202,7 @@
   <body>
     <header>
       <h1>Harshit Rameja</h1>
-      <p>Software Developer | Web Enthusiast | Problem Solver</p>
+      <p>Software Developer ⚡ Web Enthusiast ⚡ Problem Solver</p>
       <nav>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -121,69 +210,82 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
+
     <div class="container">
       <section id="about">
         <h2>About Me</h2>
         <p>
-          Hello! I'm Harshit Rameja, a passionate software developer with
-          experience in building web applications and solving real-world
-          problems. I enjoy working with modern technologies and am always eager
-          to learn and grow. My focus is on writing clean, efficient, and
-          maintainable code.
+          Hey there 👋 I'm <strong>Harshit</strong>, a curious developer who
+          loves creating sleek, user-friendly, and efficient digital
+          experiences. I enjoy turning ideas into reality with clean code and a
+          modern design touch. Always learning, always building, and always
+          experimenting 🚀.
         </p>
       </section>
+
       <section id="skills">
         <h2>Skills</h2>
         <ul class="skills-list">
-          <li>JavaScript</li>
-          <li>HTML5 &amp; CSS3</li>
+          <li>JavaScript (ES6+)</li>
           <li>React.js</li>
           <li>Node.js</li>
           <li>Python</li>
-          <li>Git &amp; GitHub</li>
-          <li>SQL</li>
+          <li>SQL &amp; Databases</li>
           <li>REST APIs</li>
+          <li>Git &amp; GitHub</li>
+          <li>HTML5 &amp; CSS3</li>
         </ul>
       </section>
+
       <section id="projects">
         <h2>Projects</h2>
-        <div class="projects-list">
-          <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>
-              A personal portfolio website to showcase my skills, projects, and
-              experience. Built with HTML, CSS, and JavaScript.
-            </p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <h3>Task Manager App</h3>
-            <p>
-              A web application to manage daily tasks with features like add,
-              edit, delete, and mark as complete. Built using React and Node.js.
-            </p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <h3>Weather Dashboard</h3>
-            <p>
-              A responsive dashboard that displays real-time weather information
-              using a public API. Built with JavaScript and CSS.
-            </p>
-            <a href="#" target="_blank">View Project</a>
-          </div>
+        <div class="project-card">
+          <h3>🚀 Futuristic Portfolio</h3>
+          <p>
+            My personal portfolio site (this one!) built with HTML, CSS, and
+            love 💖. Designed to highlight my work and personality with a sleek,
+            modern dark theme.
+          </p>
+          <a href="#">View Project</a>
+        </div>
+
+        <div class="project-card">
+          <h3>✅ Task Manager Pro</h3>
+          <p>
+            A productivity web app to manage tasks efficiently. Features add,
+            edit, delete, and mark complete functionality. Built with React &
+            Node.js.
+          </p>
+          <a href="#">View Project</a>
+        </div>
+
+        <div class="project-card">
+          <h3>🌦 Weather Dashboard</h3>
+          <p>
+            A responsive dashboard that shows real-time weather forecasts using
+            public APIs. Minimal UI and smooth experience built with JavaScript.
+          </p>
+          <a href="#">View Project</a>
         </div>
       </section>
+
       <section id="contact">
         <h2>Contact</h2>
+        <p>Let’s connect! Feel free to reach out 👇</p>
         <div class="contact-info">
-          <a href="mailto:harshit.rameja@email.com">harshit.rameja@email.com</a>
-          <a href="https://github.com/harshitrameja" target="_blank">GitHub</a>
+          <a href="mailto:harshit.rameja@email.com"
+            >📧 harshit.rameja@email.com</a
+          >
+          <a href="https://github.com/harshitrameja" target="_blank"
+            >💻 GitHub</a
+          >
           <a href="https://linkedin.com/in/harshitrameja" target="_blank"
-            >LinkedIn</a
+            >🔗 LinkedIn</a
           >
         </div>
       </section>
     </div>
+
+    <footer>&copy; 2025 Harshit Rameja. Built with ❤️ & caffeine.</footer>
   </body>
 </html>
