--- a/index.html
+++ b/index.html
@@ -4,227 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harshit Rameja | Portfolio</title>
-    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Fira+Code:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      /* Reset */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        scroll-behavior: smooth;
-      }
-
-      body {
-        font-family: "Poppins", sans-serif;
-        background: linear-gradient(135deg, #0f0f0f, #1c1c1c 40%, #111 100%);
-        color: #f2f2f2;
-        line-height: 1.6;
-      }
-
-      header {
-        background: linear-gradient(90deg, #ff4d4d, #ff9a00, #ffd500);
-        background-size: 200% 200%;
-        animation: gradientFlow 6s ease infinite;
-        color: #fff;
-        text-align: center;
-        padding: 3rem 1rem;
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-      }
-
-      header h1 {
-        font-size: 2.8rem;
-        margin-bottom: 0.5rem;
-        font-family: "Fira Code", monospace;
-      }
-
-      header p {
-        font-size: 1.2rem;
-        opacity: 0.9;
-      }
-
-      /* --- NAV FIX: horizontal alignment --- */
-      header nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: clamp(0.5rem, 2vw, 1.25rem);
-        margin-top: 1rem;
-        flex-wrap: wrap;
-      }
-
-      header nav a {
-        margin: 0;
-        text-decoration: none;
-        color: #fff;
-        font-weight: 500;
-        position: relative;
-        display: inline-flex;
-        padding: 0.35rem 0.6rem;
-        transition: color 0.3s;
-      }
-
-      header nav a::after {
-        content: "";
-        height: 2px;
-        width: 0;
-        background: #fff;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        transition: width 0.3s;
-      }
-
-      header nav a:hover::after {
-        width: 100%;
-      }
-
-      .container {
-        max-width: 1000px;
-        margin: 2rem auto;
-        padding: 0 1.5rem;
-      }
-
-      section {
-        margin-bottom: 3rem;
-      }
-
-      h2 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        display: inline-block;
-        font-family: "Fira Code", monospace;
-        background: linear-gradient(90deg, #ff4d4d, #ff9a00, #ffd500);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      p {
-        font-size: 1.1rem;
-        color: #dcdcdc;
-      }
-
-      /* Skills */
-      .skills-list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        margin-top: 1rem;
-        list-style: none;
-      }
-      .skills-list li {
-        padding: 0.6rem 1.2rem;
-        background: #1f1f1f;
-        border-radius: 20px;
-        border: 1px solid #333;
-        font-size: 1rem;
-        transition: transform 0.3s, box-shadow 0.3s;
-      }
-      .skills-list li:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 0 10px rgba(255, 180, 0, 0.5);
-      }
-
-      /* Projects */
-      .project-card {
-        background: #1b1b1b;
-        border: 1px solid #333;
-        border-radius: 10px;
-        padding: 1.5rem;
-        margin-bottom: 1.5rem;
-        transition: transform 0.3s, box-shadow 0.3s;
-      }
-      .project-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 0 15px rgba(255, 77, 77, 0.4);
-      }
-      .project-card h3 {
-        margin-bottom: 0.5rem;
-        color: #ffd500;
-      }
-      .project-card a {
-        display: inline-block;
-        margin-top: 0.5rem;
-        color: #ff9a00;
-        text-decoration: none;
-        font-weight: 500;
-      }
-      .project-card a:hover {
-        text-decoration: underline;
-      }
-
-      /* Contact */
-      .contact-info {
-        margin-top: 1rem;
-      }
-      .contact-info a {
-        margin-right: 1.5rem;
-        text-decoration: none;
-        color: #ff9a00;
-        font-weight: 500;
-      }
-      .contact-info a:hover {
-        color: #ffd500;
-      }
-
-      footer {
-        text-align: center;
-        padding: 2rem;
-        font-size: 0.9rem;
-        color: #aaa;
-        border-top: 1px solid #222;
-      }
-
-      @keyframes gradientFlow {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      @media (max-width: 600px) {
-        header h1 {
-          font-size: 2rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Harshit Rameja</h1>
-      <p>Software Developer ⚡ Web Enthusiast ⚡ Problem Solver</p>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+    <main id="home" class="hero">
+      <div class="hero-inner">
+        <h1 class="brand">Harshit Rameja</h1>
+        <p class="tagline">
+          Software Developer • Web Enthusiast • Problem Solver
+        </p>
+        <div class="cta">
+          <a href="#projects" class="btn primary">View Projects</a>
+          <a href="#contact" class="btn secondary">Contact</a>
+        </div>
+      </div>
+    </main>
 
-    <div class="container">
-      <section id="about">
-        <h2>About Me</h2>
-        <p>
+    <section id="about" class="section">
+      <div class="container">
+        <h2 class="section-title">About Me</h2>
+        <p class="lead">
           Hey there 👋 I'm <strong>Harshit</strong>, a curious developer who
           loves creating sleek, user-friendly, and efficient digital
           experiences. I enjoy turning ideas into reality with clean code and a
           modern design touch. Always learning, always building, and always
           experimenting 🚀.
         </p>
-      </section>
+      </div>
+    </section>
 
-      <section id="skills">
-        <h2>Skills</h2>
+    <section id="skills" class="section">
+      <div class="container">
+        <h2 class="section-title">Skills</h2>
         <ul class="skills-list">
           <li>JavaScript (ES6+)</li>
           <li>React.js</li>
@@ -235,57 +52,67 @@
           <li>Git &amp; GitHub</li>
           <li>HTML5 &amp; CSS3</li>
         </ul>
-      </section>
+      </div>
+    </section>
 
-      <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-card">
-          <h3>🚀 Futuristic Portfolio</h3>
-          <p>
-            My personal portfolio site (this one!) built with HTML, CSS, and
-            love 💖. Designed to highlight my work and personality with a sleek,
-            modern dark theme.
-          </p>
-          <a href="#">View Project</a>
+    <section id="projects" class="section">
+      <div class="container">
+        <h2 class="section-title">Projects</h2>
+        <div class="projects-grid">
+          <article class="card">
+            <h3>Futuristic Portfolio</h3>
+            <p>
+              Personal site with immersive gradients, smooth interactions, and
+              accessible design.
+            </p>
+            <a href="#">View Project</a>
+          </article>
+          <article class="card">
+            <h3>Task Manager Pro</h3>
+            <p>
+              Productivity app with CRUD, filters, and keyboard-first UX powered
+              by React.
+            </p>
+            <a href="#">View Project</a>
+          </article>
+          <article class="card">
+            <h3>Weather Dashboard</h3>
+            <p>
+              Real-time weather with clean data visuals and responsive layout
+              using public APIs.
+            </p>
+            <a href="#">View Project</a>
+          </article>
         </div>
+      </div>
+    </section>
 
-        <div class="project-card">
-          <h3>✅ Task Manager Pro</h3>
-          <p>
-            A productivity web app to manage tasks efficiently. Features add,
-            edit, delete, and mark complete functionality. Built with React &
-            Node.js.
-          </p>
-          <a href="#">View Project</a>
-        </div>
-
-        <div class="project-card">
-          <h3>🌦 Weather Dashboard</h3>
-          <p>
-            A responsive dashboard that shows real-time weather forecasts using
-            public APIs. Minimal UI and smooth experience built with JavaScript.
-          </p>
-          <a href="#">View Project</a>
-        </div>
-      </section>
-
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>Let’s connect! Feel free to reach out 👇</p>
-        <div class="contact-info">
-          <a href="mailto:harshit.rameja@email.com"
-            >📧 harshit.rameja@email.com</a
-          >
-          <a href="https://github.com/harshitrameja" target="_blank"
-            >💻 GitHub</a
-          >
+    <section id="contact" class="section">
+      <div class="container">
+        <h2 class="section-title">Contact</h2>
+        <p class="lead">
+          Let’s connect. I’m open to collaborations and new opportunities.
+        </p>
+        <div class="contact-links">
+          <a href="mailto:harshit.rameja@email.com">Email</a>
+          <a href="https://github.com/harshitrameja" target="_blank">GitHub</a>
           <a href="https://linkedin.com/in/harshitrameja" target="_blank"
-            >🔗 LinkedIn</a
+            >LinkedIn</a
           >
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <footer>&copy; 2025 Harshit Rameja. Built with ❤️ & caffeine.</footer>
+    <footer class="footer">© 2025 Harshit Rameja</footer>
+
+    <nav class="bottom-nav">
+      <a href="#home" data-link="home">Home</a>
+      <a href="#about" data-link="about">About</a>
+      <a href="#skills" data-link="skills">Skills</a>
+      <a href="#projects" data-link="projects">Projects</a>
+      <a href="#contact" data-link="contact">Contact</a>
+    </nav>
+
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
